--- a/components/obs/mc/normal.scss
+++ b/components/obs/mc/normal.scss
@@ -6,17 +6,16 @@
   .mc3,
   .mc4 {
     position: absolute;
-    top: 774px;
+    right: 1502px;
     width: 400px;
-    height: 60px;
-    font-size: 30px;
-    line-height: 30px;
-    color: var(--main-color);
-    text-align: center;
-    letter-spacing: 2px;
+    height: 24px;
+    font-size: 24px;
+    line-height: 24px;
+    color: #fff;
+    text-align: right;
 
     span {
-      margin-left: 10px;
+      margin-left: 12px;
       font-size: inherit;
 
       &:first-child {
@@ -26,116 +25,120 @@
   }
 
   .mc_team {
-    @include mediumWeight;
+    font-family: "C4 ゴシック・ドゥ RE 04", Satoshi, "Noto Sans JP", sans-serif;
+    font-variation-settings: "wght" 700;
+    font-weight: 700;
+    color: #7255e7;
   }
 
   .mc_name {
-    @include blackWeight;
+    font-family: "C4 ゴシック・ドゥ RE 04", Satoshi, "Noto Sans JP", sans-serif;
+    font-variation-settings: "wght" 700;
+    font-weight: 700;
   }
 
   .id1,
   .id2,
   .id3,
   .id4 {
-    @include boldWeight;
-
     position: absolute;
-    top: 835px;
-    left: 300px;
+    right: 1502px;
     width: 270px;
-    height: 30px;
-    font-size: 19px;
-    line-height: 19px;
-    color: var(--sub-color);
-    text-align: center;
-    letter-spacing: 1px;
+    height: 18px;
+    font-family: "C4 ゴシック・ドゥ RE 04", Satoshi, "Noto Sans JP", sans-serif;
+    font-size: 18px;
+    font-variation-settings: "wght" 500;
+    font-weight: 500;
+    line-height: 18px;
+    color: #fff;
+    text-align: right;
   }
 
   .mc1_layout {
     .mc1 {
-      left: 760px;
+      top: 132px;
     }
 
     .id1 {
-      left: 825px;
+      top: 156px;
     }
   }
 
   .mc2_layout {
     .mc1 {
-      left: 380px;
+      top: 132px;
     }
 
     .id1 {
-      left: 325px;
+      top: 156px;
     }
 
     .mc2 {
-      left: 1140px;
+      top: 192px;
     }
 
     .id2 {
-      left: 1325px;
+      top: 216px;
     }
   }
 
   .mc3_layout {
     .mc1 {
-      left: 240px;
+      top: 132px;
     }
 
     .id1 {
-      left: 185px;
+      top: 156px;
     }
 
     .mc2 {
-      left: 760px;
+      top: 192px;
     }
 
     .id2 {
-      left: 825px;
+      top: 216px;
     }
 
     .mc3 {
-      left: 1280px;
+      top: 251px;
     }
 
     .id3 {
-      left: 1465px;
+      top: 275px;
     }
   }
 
   .mc4_layout {
     .mc1 {
-      left: 130px;
+      top: 132px;
     }
 
     .id1 {
-      left: 90px;
+      top: 156px;
     }
 
     .mc2 {
-      left: 550px;
+      top: 192px;
     }
 
     .id2 {
-      left: 510px;
+      top: 216px;
     }
 
     .mc3 {
-      left: 970px;
+      top: 251px;
     }
 
     .id3 {
-      left: 1140px;
+      top: 275px;
     }
 
     .mc4 {
-      left: 1390px;
+      top: 310px;
     }
 
     .id4 {
-      left: 1560px;
+      top: 334px;
     }
   }
 }
