--- a/components/obs/next/normal.scss
+++ b/components/obs/next/normal.scss
@@ -2,123 +2,134 @@
 
 .other {
   .nextnow {
-    @include mediumWeight;
-
     position: absolute;
-    top: 880px;
-    left: 40px;
-    width: 220px;
-    height: 80px;
-    font-size: 52px;
-    color: var(--main-color);
+    top: 402px;
+    left: 346px;
+    width: 128px;
+    height: 60px;
+    font-family: "Bebas Kai", Satoshi, "Noto Sans JP", sans-serif;
+    font-size: 60px;
+    font-variation-settings: "wght" 500;
+    font-weight: 500;
+    line-height: 60px;
+    color: #fff;
     text-align: center;
-    letter-spacing: 0.05em;
   }
 
   .statusBox {
     position: absolute;
-    top: 880px;
-    left: 300px;
+    top: 472px;
+    right: 1426px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 340px;
     height: 80px;
+    letter-spacing: 0.1px;
   }
 
   .round,
   .bo {
-    @include blackWeight;
-
     width: 320px;
     margin: 0;
-    font-size: 24px;
-    font-style: italic;
-    line-height: 24px;
-    color: var(--sub-color);
-    text-align: left;
-    letter-spacing: 2px;
+    font-family: "Bebas Kai", Satoshi, "Noto Sans JP", sans-serif;
+    font-size: 36px;
+    font-variation-settings: "wght" 900;
+    font-weight: 900;
+    line-height: 36px;
+    color: #fff;
+    text-align: right;
   }
 
   .score {
-    @include blackWeight;
-
     position: absolute;
-    top: 980px;
+    left: 420px;
     width: 60px;
     margin: 0;
-    font-size: 40px;
-    color: var(--main-color);
+    font-family: "Futura PT Heavy", Satoshi, "Noto Sans JP", sans-serif;
+    font-size: 36px;
+    font-variation-settings: "wght" 900;
+    font-weight: 900;
+    color: #fff;
     text-align: center;
 
     &.p1 {
-      left: 500px;
+      top: 571px;
     }
 
     &.p2 {
-      left: 580px;
+      top: 629px;
     }
   }
 
   .player {
     position: absolute;
     top: 996px;
+    right: 1517px;
     width: 440px;
-    height: 60px;
+    height: 40px;
     margin: 0;
-    text-align: center;
+    text-align: right;
 
     &.p1 {
-      left: 40px;
+      top: 586px;
     }
 
     &.p2 {
-      left: 660px;
+      top: 642px;
     }
 
     .team {
-      @include mediumWeight;
-
-      font-size: 28px;
-      line-height: 28px;
-      color: var(--sub-color);
-      text-align: center;
-      letter-spacing: 1px;
+      font-family: "C4 ゴシック・ドゥ RE 04", Satoshi, "Noto Sans JP",
+        sans-serif;
+      font-size: 24px;
+      font-variation-settings: "wght" 500;
+      font-weight: 500;
+      line-height: 24px;
+      color: #7255e7;
+      text-align: right;
     }
 
     .name {
-      @include blackWeight;
-
-      margin-left: 1rem;
-      font-size: 28px;
-      line-height: 28px;
-      color: var(--sub-color);
-      text-align: center;
-      letter-spacing: 1px;
+      margin-left: 12px;
+      font-family: "C4 ゴシック・ドゥ RE 04", Satoshi, "Noto Sans JP",
+        sans-serif;
+      font-size: 24px;
+      font-variation-settings: "wght" 900;
+      font-weight: 900;
+      line-height: 24px;
+      color: #fff;
+      text-align: right;
     }
   }
 
   .localsetting {
-    @include mediumWeight;
-
     position: absolute;
     top: 975px;
     left: 1570px;
+    display: none;
+    font-family: "Futura PT Heavy", Satoshi, "Noto Sans JP", sans-serif;
     font-size: 24px;
+    font-variation-settings: "wght" 500;
+    font-weight: 500;
     line-height: 26px;
-    color: var(--sub-color);
+    color: #fff;
     letter-spacing: 1px;
   }
 
   .localtime {
-    @include blackWeight;
-
     position: absolute;
-    top: 960px;
-    right: 57px;
-    font-size: 52px;
+    top: 34px;
+    left: 347px;
+    width: 126px;
+    height: 60px;
+    font-family: "Bebas Kai", Satoshi, "Noto Sans JP", sans-serif;
+    font-size: 60px;
+    font-variation-settings: "wght" 900;
+    font-weight: 900;
     font-variant-numeric: tabular-nums;
-    color: var(--sub-color);
-    text-align: right;
+    line-height: 60px;
+    color: #fff;
+    text-align: center;
   }
 }
