--- a/components/obs/score/Single.scss
+++ b/components/obs/score/Single.scss
@@ -1,5 +1,5 @@
 @import "components/obs/score/base";
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@500;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@500;600;700;900&display=swap");
 @font-face {
   font-family: "Nikolai Bold";
   src: url("/fonts/Nikolai-Bold.woff2");
@@ -19,6 +19,10 @@
 @font-face {
   font-family: "Gambetta Bold";
   src: url("/fonts/Gambetta-Bold.woff2");
+}
+@font-face {
+  font-family: "Gambetta Medium";
+  src: url("/fonts/Gambetta-Medium.woff2");
 }
 @font-face {
   font-family: "Gambetta Semi Bold";
@@ -52,11 +56,11 @@
     color: var(--black);
 
     &.p1 {
-      left: 800px;
+      left: 350px;
     }
 
     &.p2 {
-      right: 800px;
+      right: 350px;
     }
   }
 
@@ -64,7 +68,7 @@
   .player {
     position: absolute;
     top: 62px;
-    width: 430px;
+    width: 380px;
     height: 60px;
     text-align: center;
 
@@ -77,19 +81,19 @@
     }
 
     &.p1 {
-      left: 350px;
+      left: 440px;
     }
 
     &.p2 {
-      right: 350px;
+      right: 440px;
     }
 
     .team {
       @include mediumWeight;
 
-      font-family: "Gambetta Regular", "Noto Serif JP", serif;
+      font-family: "Gambetta Semi Bold", "Noto Serif JP", serif;
       font-size: 28px;
-      font-weight: 500;
+      font-weight: 700;
       line-height: 28px;
       color: var(--black);
       text-align: center;
@@ -122,31 +126,35 @@
 
   .box {
     position: absolute;
-    top: 46px;
-    left: 15px;
+    top: 47px;
+    left: 840px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 215px;
-    height: 60px;
+    width: 240px;
+    height: 50px;
+    line-height: 16px;
   }
 
   // 試合ステータスの位置設定
   .round {
     @include status;
 
-    font-family: "Gambetta Semi Bold", serif;
+    width: 240px;
+    font-family: "Gambetta Bold", serif;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+    letter-spacing: 0.025em;
   }
 
   .matchType {
-    position: absolute;
-    top: 5px;
-    left: 875px;
-    width: 140px;
     font-family: "Gambetta Bold", serif;
-    font-size: 24px;
+    font-size: 18px;
     color: white;
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
   }
 
   .cameraRight,
