--- a/components/obs/score/Single.scss
+++ b/components/obs/score/Single.scss
@@ -19,18 +19,22 @@
 @font-face {
   font-family: "Gambetta Bold";
   src: url("/fonts/Gambetta-Bold.woff2");
+  size-adjust: 112%;
 }
 @font-face {
   font-family: "Gambetta Medium";
   src: url("/fonts/Gambetta-Medium.woff2");
+  size-adjust: 112%;
 }
 @font-face {
   font-family: "Gambetta Semi Bold";
   src: url("/fonts/Gambetta-Semibold.woff2");
+  size-adjust: 112%;
 }
 @font-face {
   font-family: "Gambetta Regular";
   src: url("/fonts/Gambetta-Regular.woff2");
+  size-adjust: 112%;
 }
 // 試合ステータス（Winners Semis, Best of 3など）の設定
 @mixin status {
@@ -50,25 +54,25 @@
     @include blackWeight;
 
     top: 38px;
-    width: 70px;
+    width: 80px;
     font-family: "Nikolai Bold", serif;
-    font-size: 65px;
+    font-size: 70px;
     color: var(--black);
 
     &.p1 {
-      left: 350px;
+      left: 291px;
     }
 
     &.p2 {
-      right: 350px;
+      right: 291px;
     }
   }
 
   // プレイヤー名の位置指定
   .player {
     position: absolute;
-    top: 62px;
-    width: 380px;
+    top: 66px;
+    width: 420px;
     height: 60px;
     text-align: center;
 
@@ -81,18 +85,18 @@
     }
 
     &.p1 {
-      left: 440px;
+      left: 385px;
     }
 
     &.p2 {
-      right: 440px;
+      right: 385px;
     }
 
     .team {
       @include mediumWeight;
 
       font-family: "Gambetta Semi Bold", "Noto Serif JP", serif;
-      font-size: 28px;
+      font-size: 27px;
       font-weight: 700;
       line-height: 28px;
       color: var(--black);
@@ -126,21 +130,22 @@
 
   .box {
     position: absolute;
-    top: 47px;
-    left: 840px;
+    top: 53px;
+    left: 820px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 240px;
+    width: 280px;
     height: 50px;
-    line-height: 16px;
+    line-height: 20px;
+    text-align: center;
   }
 
   // 試合ステータスの位置設定
   .round {
     @include status;
 
-    width: 240px;
+    width: 280px;
     font-family: "Gambetta Bold", serif;
     font-size: 25px;
     color: white;
@@ -150,7 +155,7 @@
 
   .matchType {
     font-family: "Gambetta Bold", serif;
-    font-size: 18px;
+    font-size: 19px;
     color: white;
     text-align: center;
     text-transform: uppercase;
