--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,6 +40,10 @@
   font-family: "C4 ゴシック・ドゥ RE 04";
   src: url("/fonts/C4_GothicDeux_RE.ttf");
 }
+@font-face {
+  font-family: "FOT-UD角ゴC80 Pro";
+  src: url("/fonts/FOT-UDkakugo80Pro.ttf");
+}
 
 :root {
   --dark-gray: #111;
