--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,6 +37,10 @@
   font-family: "Nitalago Ruika5";
   src: url("/fonts/NitalagoRuika-05M.TTF");
 }
+@font-face {
+  font-family: "Euclid Flex Bold";
+  src: url("/fonts/EuclidFlex-Bold.otf");
+}
 
 :root {
   --dark-gray: #111;
