--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,6 +42,21 @@
   src: url("/fonts/EuclidFlex-Bold.otf");
 }
 
+@font-face {
+  font-family: "Clash Display Medium";
+  src: url("/fonts/ClashDisplay-Medium.woff2");
+}
+
+@font-face {
+  font-family: "Clash Display Medium";
+  src: url("/fonts/ClashDisplay-Medium.woff2");
+}
+
+@font-face {
+  font-family: "Clash Display Bold";
+  src: url("/fonts/ClashDisplay-Bold.woff2");
+}
+
 :root {
   --dark-gray: #111;
   --black: #202025;
